# pyllector

./: .gitignore  README.md  api_collector.py  models.py  pylector.py  pyllector.py  pyproject.toml  setup.cfg  test_pyllector.py
pyllector/: __init__.py  async_client.py  client.py  models.py  tools.py
pyllector/async_client/: client.py
pyllector/sync/: client.py
test/: test_api_collector.py
tests/: test_pyllector.py
