[tool.poetry]
name = "pyllector"
version = "0.1.9.1"
description = "Simple api collector"
authors = ["KolesniCow <alexandr.kolesnikovv2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = "^3.8.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
