[tool.poetry]
name = "pyllector"
version = "0.3.0"
description = "Simple api collector"
authors = ["KolesniCow <alexandr.kolesnikovv2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
